# anime-recommender

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: app.py
config/: config.py
data/: processed_anime.csv
pipeline/: build_pipeline.py  pipeline.py
src/: dataloader.py  prompt_template.py  recommender.py  vector_store.py
utils/: custom_exceptions.py  logger.py
